@@ -7,6 +7,7 @@ def diagnostics_recipes; @diagnostics_recipes end
 def diagnostics_prefs; @diagnostics_prefs end
 
 def say_custom(tag, text); say "\033[1m\033[36m" + tag.to_s.rjust(10) + "\033[0m" + "  #{text}" end
+def say_loud(tag, text); say "\033[1m\033[36m" + tag.to_s.rjust(10) + "  #{text}" + "\033[0m" end
 def say_recipe(name); say "\033[1m\033[36m" + "recipe".rjust(10) + "\033[0m" + "  Running #{name} recipe..." end
 def say_wizard(text); say_custom(@current_recipe || 'composer', text) end
 
