@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.0.7 unreleased
+
+* option to join the Rails Composer mailing list
+
 h3. 3.0.6 July 2, 2014
 
 * fix generation of routes for OmniAuth
